fix dialog scrollbars

--- a/src/styles/_mixins.scss
+++ b/src/styles/_mixins.scss
@@ -511,6 +511,7 @@ $button-custom-shadow: -1px -1px 5px rgba(0, 0, 0, 0.05), 1px 1px 5px rgba(0, 0,
   &.el-scrollbar {
     .el-scrollbar__wrap {
       overflow-x: hidden;
+      margin-bottom: 0px !important; // to disable element-ui negative margin
     }
     .el-scrollbar__wrap, .el-scrollbar__view {
       display: flex;
